--- a/thule-discovery/build.gradle
+++ b/thule-discovery/build.gradle
@@ -1,4 +1,6 @@
 buildscript {
+    ext["byte-buddy.version"] = "1.8.17" // Spring boot uses version 1.7.11 but version 1.8.0+ is required for java 10 support
+
     repositories {
         maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
@@ -52,6 +54,10 @@ project("thule-discovery-service") {
 
     dependencies {
         compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
+        compile("com.sun.xml.bind:jaxb-core:2.3.0.1") // Required by Eureka (jaxb) when using java 9+
+        compile("com.sun.xml.bind:jaxb-impl:2.3.0.1") // Required by Eureka (jaxb) when using java 9+
+        compile("javax.activation:javax.activation-api:1.2.0") // Required by Eureka (jaxp) when using java 9+
+        compile("javax.xml.bind:jaxb-api") // Required by Eureka (jaxb) when using java 9+
         compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-web")
