--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -39,6 +39,27 @@ subprojects {
     jar.enabled = true // Don't need an "über-jar" but still want the rest of the spring boot plugin
 }
 
+project("thule-spring-boot-starter-oauth2") {
+    description = "GoHenry Spring Boot Starter Oauth2"
+    dependencies {
+        compile project(":thule-utils")
+        compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+
+        testCompile project(":thule-spring-boot-starter-test")
+
+        itestCompile project(":thule-oauth2-test")
+    }
+}
+
+project("thule-spring-boot-starter-oauth2-test") {
+    description = "GoHenry Spring Boot Starter Oauth2 Test"
+    dependencies {
+        compile project(":thule-oauth2-test")
+
+        testCompile project(":thule-spring-boot-starter-test")
+    }
+}
+
 
 project("thule-spring-boot-starter-test") {
     description = "Thule Spring Boot Starter Test"
@@ -61,12 +82,25 @@ project("thule-spring-boot-starter-utils") {
     }
 }
 
+project("thule-oauth2-test") {
+    description = "GoHenry OAuth2 Test"
+    dependencies {
+        compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+
+        testCompile project(":thule-spring-boot-starter-test")
+    }
+}
+
 project("thule-test") {
     description = "Thule Test"
     dependencies {
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-test")
-        compile("org.springframework.boot:spring-boot-starter-web")
+        compile("org.springframework.boot:spring-boot-starter-web") {
+            // spring-webmvc is not required and actually causes a problem with gohenry-gateway-service
+            // which is incompatible with spring-webmvc, hence it has been excluded
+            exclude group: "org.springframework", module: "spring-webmvc"
+        }
         compile("org.springframework.retry:spring-retry")
 
         testCompile("pl.pojo:pojo-tester:0.7.6")
@@ -76,7 +110,12 @@ project("thule-test") {
 project("thule-utils") {
     description = "Thule Utils"
     dependencies {
+        compile("com.sun.xml.bind:jaxb-core:2.3.0.1") // Required as part of SOAP (jaxb) when using java 9+
+        compile("com.sun.xml.bind:jaxb-impl:2.3.0.1") // Required as part of SOAP (jaxb) when using java 9+
         compile("commons-discovery:commons-discovery:0.4")
+        compile("javax.activation:javax.activation-api:1.2.0") // Required as part of SOAP (jaxp) when using java 9+
+        compile("javax.xml.bind:jaxb-api") // Required as part of SOAP (jaxb) when using java 9+
+        compile("javax.xml.soap:javax.xml.soap-api:1.4.0") // Required as part of SOAP (jaxws) when using java 9+
         compile("net.logstash.logback:logstash-logback-encoder:5.2")
         compile("org.codehaus.janino:janino:3.0.8") // Required by logback if-condition statements in the xml configuration
         compile("org.apache.axis:axis:1.4")
