--- a/thule-shared/settings.gradle
+++ b/thule-shared/settings.gradle
@@ -6,7 +6,10 @@ pluginManagement {
 
 rootProject.name = "thule-shared"
 
+include "thule-spring-boot-starter-oauth2"
+include "thule-spring-boot-starter-oauth2-test"
 include "thule-spring-boot-starter-test"
 include "thule-spring-boot-starter-utils"
+include "thule-oauth2-test"
 include "thule-test"
 include "thule-utils"
