--- a/thule-gateway/build.gradle
+++ b/thule-gateway/build.gradle
@@ -53,6 +53,7 @@ project("thule-gateway-service") {
     }
 
     dependencies {
+        compile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:1.0.0-SNAPSHOT")
         compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.cloud:spring-cloud-starter-config")
@@ -67,10 +68,8 @@ project("thule-gateway-service") {
         itestCompile project(":thule-gateway-config")
 
         ctestCompile project(":thule-gateway-config")
-        ctestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
 
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
-        dtestCompile("org.springframework.cloud:spring-cloud-starter-openfeign")
     }
 }
