--- a/thule-gateway/build.gradle
+++ b/thule-gateway/build.gradle
@@ -53,7 +53,7 @@ project("thule-gateway-service") {
     }
 
     dependencies {
-        //compile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:1.0.0-SNAPSHOT")
+        compile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:1.0.0-SNAPSHOT")
         compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.cloud:spring-cloud-starter-config")
