--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -59,6 +59,7 @@ project("thule-people-service") {
     }
 
     dependencies {
+        compile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:1.0.0-SNAPSHOT")
         compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
         compile("com.googlecode.log4jdbc:log4jdbc:1.2")
         compile("javax.xml.bind:jaxb-api") // Required by Hibernate (jaxb) when using java 9+
@@ -68,7 +69,6 @@ project("thule-people-service") {
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
         compile("org.springframework.boot:spring-boot-starter-data-rest")
-        compile("org.springframework.boot:spring-boot-starter-security")
         compile("org.springframework.boot:spring-boot-starter-validation")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
@@ -79,6 +79,7 @@ project("thule-people-service") {
         // Required to retry connecting to the configuration service when it is not available at startup
         compile("org.springframework.retry:spring-retry")
 
+        testCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
         testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
 
         itestCompile project(":thule-people-config")
@@ -88,8 +89,10 @@ project("thule-people-service") {
         itestCompile("org.springframework.security:spring-security-test")
 
         ctestCompile project(":thule-people-config")
-        ctestCompile("org.springframework.security:spring-security-test")
 
+
+
+        dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
         dtestCompile("com.googlecode.log4jdbc:log4jdbc:1.2")
