--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -89,8 +89,7 @@ project("thule-people-service") {
         itestCompile("org.springframework.security:spring-security-test")
 
         ctestCompile project(":thule-people-config")
-
-
+        ctestCompile("org.springframework.security:spring-security-test")
 
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
