--- a/thule-configuration/build.gradle
+++ b/thule-configuration/build.gradle
@@ -91,6 +91,7 @@ project("thule-configuration-service") {
 
     dependencies {
         compile("uk.co.serin.thule:thule-spring-boot-starter-utils:1.0.0-SNAPSHOT")
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.cloud:spring-cloud-config-server")
         compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
