--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -8,14 +8,14 @@ buildscript {
 }
 
 plugins {
-    id "com.github.ben-manes.versions" version "0.20.0" apply(false)
+    id "com.github.ben-manes.versions" version "0.20.0" //apply(false)
     id "com.palantir.docker" version "0.20.1" apply(false)
     id "org.sonarqube" version "2.6.2" apply(false)
     id "org.springframework.boot" version "2.0.4.RELEASE" apply(false)
 }
 
 subprojects {
-    apply plugin: "com.github.ben-manes.versions"
+//    apply plugin: "com.github.ben-manes.versions"
     apply plugin: "com.palantir.docker"
     apply plugin: "io.spring.dependency-management"
     apply plugin: "jacoco"
