--- a/thule-admin/thule-admin-config/src/main/resources/config/application-ide.yml
+++ b/thule-admin/thule-admin-config/src/main/resources/config/application-ide.yml
@@ -1,13 +1,14 @@
-# Eureka configuration
-eureka:
-  client:
-    enabled: true
+# Spring logging
+logging:
+  level:
+    com.gohenry: trace
 
 # Spring server configuration
 server:
   port: 8093
 
-# Thule configuration
-thule:
+# GoHenry configuration
+gohenry:
   discoveryservice:
+    host: localhost
     port: 8761
