--- a/thule-admin/thule-admin-service/src/main/resources/bootstrap-ide.yml
+++ b/thule-admin/thule-admin-service/src/main/resources/bootstrap-ide.yml
@@ -1,10 +1,5 @@
-# Spring cloud configuration
-spring:
-  cloud:
-    config:
-      enabled: true
-
 # Thule configuration
 thule:
   configurationservice:
+    host: localhost
     port: 8888
