--- a/thule-configuration/thule-configuration-service/src/dtest/docker/thule-configuration-docker-tests/docker-compose.yml
+++ b/thule-configuration/thule-configuration-service/src/dtest/docker/thule-configuration-docker-tests/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   thule-configuration-service:
     image: pooh:8084/thule-configuration-service
     environment:
+      EUREKA_CLIENT_ENABLED: "false" # Docker tests do not need a discovery registry
+      SPRING_CLOUD_CONFIG_ENABLED: "false" # Docker tests do not need a configuration service
       TZ: Europe/London
     ports:
     - 9888:8080 # Required to allow docker tests to call the restful api
