--- a/thule-shared/settings.gradle
+++ b/thule-shared/settings.gradle
@@ -10,6 +10,6 @@ include "thule-spring-boot-starter-oauth2"
 include "thule-spring-boot-starter-oauth2-test"
 include "thule-spring-boot-starter-test"
 include "thule-spring-boot-starter-utils"
-include "thule-oauth2-test"
+include "thule-oauth2"
 include "thule-test"
 include "thule-utils"
