--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -68,7 +68,6 @@ project("thule-people-service") {
         compile("org.springframework.boot:spring-boot-starter-actuator")
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
         compile("org.springframework.boot:spring-boot-starter-data-rest")
-        compile("org.springframework.boot:spring-boot-starter-security")
         compile("org.springframework.boot:spring-boot-starter-validation")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
@@ -88,7 +87,7 @@ project("thule-people-service") {
         itestCompile("org.hsqldb:hsqldb")
 
         ctestCompile project(":thule-people-config")
-        itestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
+        ctestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
 
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2:1.0.0-SNAPSHOT")
         dtestCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
