--- a/gradle/build-config.gradle
+++ b/gradle/build-config.gradle
@@ -9,6 +9,7 @@ apply from: "${rootDir}/../gradle/build-gitflow-config.gradle"
 apply from: "${rootDir}/../gradle/build-itest-config.gradle"
 apply from: "${rootDir}/../gradle/build-ctest-config.gradle"
 apply from: "${rootDir}/../gradle/build-dtest-config.gradle"
+apply from: "${rootDir}/../gradle/build-ptest-config.gradle"
 apply from: "${rootDir}/../gradle/build-test-config.gradle"
 
 // Include bespoke gradle plugin config
