--- a/thule-admin/build.gradle
+++ b/thule-admin/build.gradle
@@ -45,7 +45,7 @@ project("thule-admin-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR2")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
         }
     }
 
