--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -11,7 +11,7 @@ plugins {
     id "com.github.ben-manes.versions" version "0.20.0" // Let it apply by default so that the plugin consolidates at the root of the project, otherwise it often hangs when checking dependency versions
     id "com.palantir.docker" version "0.21.0" apply(false)
     id "org.sonarqube" version "2.7" apply(false)
-    id "org.springframework.boot" version "2.0.6.RELEASE" apply(false)
+    id "org.springframework.boot" version "2.1.2.RELEASE" apply(false)
 }
 
 subprojects {
@@ -33,7 +33,7 @@ subprojects {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
         }
     }
 }
@@ -45,6 +45,7 @@ project("thule-spring-boot-starter-oauth2") {
         compile project(":thule-utils")
         compileOnly("org.springframework.boot:spring-boot-starter-data-jpa")
         compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+        compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE")
 
         testCompile project(":thule-spring-boot-starter-test")
         testCompile("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -106,8 +107,8 @@ project("thule-utils") {
         compile("javax.activation:javax.activation-api:1.2.0") // Required as part of SOAP (jaxp) when using java 9+
         compile("javax.xml.bind:jaxb-api") // Required as part of SOAP (jaxb) when using java 9+
         compile("javax.xml.soap:javax.xml.soap-api:1.4.0") // Required as part of SOAP (jaxws) when using java 9+
-        compile("net.logstash.logback:logstash-logback-encoder:5.2")
-        compile("org.codehaus.janino:janino:3.0.11") // Required by logback if-condition statements in the xml configuration
+        compile("net.logstash.logback:logstash-logback-encoder:5.3")
+        compile("org.codehaus.janino:janino") // Required by logback if-condition statements in the xml configuration
         compile("org.apache.axis:axis:1.4")
         compile("org.apache.axis:axis-jaxrpc:1.4")
         compile("org.hibernate:hibernate-core")
@@ -128,6 +129,7 @@ project("thule-oauth2") {
         compileOnly("org.springframework.boot:spring-boot-starter-data-jpa")
         compile("org.springframework.boot:spring-boot-starter-security")
         compile("org.springframework.cloud:spring-cloud-starter-oauth2")
+        compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE")
 
         testCompile project(":thule-test")
         testCompile("org.springframework.boot:spring-boot-starter-data-jpa")
