--- a/thule-configuration/build.gradle
+++ b/thule-configuration/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    ext["byte-buddy.version"] = "1.9.3" // Spring boot uses version 1.7.11 but version 1.8.0+ is required for java 10+ support
-
     repositories {
         maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
@@ -11,7 +9,7 @@ plugins {
     id "com.github.ben-manes.versions" version "0.20.0" // Let it apply by default so that the plugin consolidates at the root of the project, otherwise it often hangs when checking dependency versions
     id "com.palantir.docker" version "0.21.0" apply(false)
     id "org.sonarqube" version "2.7" apply(false)
-    id "org.springframework.boot" version "2.0.6.RELEASE" apply(false)
+    id "org.springframework.boot" version "2.1.2.RELEASE" apply(false)
 }
 
 project("thule-configuration-config") {
@@ -84,7 +82,7 @@ project("thule-configuration-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
         }
     }
 
