--- a/thule-discovery/build.gradle
+++ b/thule-discovery/build.gradle
@@ -11,7 +11,7 @@ plugins {
     id "com.github.ben-manes.versions" version "0.20.0" // Let it apply by default so that the plugin consolidates at the root of the project, otherwise it often hangs when checking dependency versions
     id "com.palantir.docker" version "0.21.0" apply(false)
     id "org.sonarqube" version "2.7" apply(false)
-    id "org.springframework.boot" version "2.0.6.RELEASE" apply(false)
+    id "org.springframework.boot" version "2.1.2.RELEASE" apply(false)
 }
 
 project("thule-discovery-config") {
@@ -47,7 +47,7 @@ project("thule-discovery-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
         }
     }
 
