--- a/thule-email/build.gradle
+++ b/thule-email/build.gradle
@@ -1,6 +1,4 @@
 buildscript {
-    ext["byte-buddy.version"] = "1.9.3" // Spring boot uses version 1.7.11 but version 1.8.0+ is required for java 10+ support
-
     repositories {
         maven { url "http://${nexusHost}:${nexusPort}/repository/maven-public" }
         mavenLocal()
@@ -11,7 +9,7 @@ plugins {
     id "com.github.ben-manes.versions" version "0.20.0" // Let it apply by default so that the plugin consolidates at the root of the project, otherwise it often hangs when checking dependency versions
     id "com.palantir.docker" version "0.21.0" apply(false)
     id "org.sonarqube" version "2.7" apply(false)
-    id "org.springframework.boot" version "2.0.6.RELEASE" apply(false)
+    id "org.springframework.boot" version "2.1.2.RELEASE" apply(false)
 }
 
 project("thule-email-config") {
@@ -47,7 +45,7 @@ project("thule-email-service") {
     // Dependencies
     dependencyManagement {
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Finchley.SR1")
+            mavenBom("org.springframework.cloud:spring-cloud-dependencies:Greenwich.RELEASE")
         }
     }
 
@@ -63,6 +61,8 @@ project("thule-email-service") {
         compile("org.springframework.cloud:spring-cloud-starter-zipkin")
         // Required to retry connecting to the configuration service when it is not available at startup
         compile("org.springframework.retry:spring-retry")
+        // Required due to a bug in spring cloud which has a dependency on a milestone release for spring-security-oauth2-autoconfigure:2.1.0.M4
+        compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE")
 
         testCompile("uk.co.serin.thule:thule-spring-boot-starter-oauth2-test:1.0.0-SNAPSHOT")
         testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
