--- a/thule-shared/build.gradle
+++ b/thule-shared/build.gradle
@@ -129,7 +129,8 @@ project("thule-oauth2") {
         compileOnly("org.springframework.boot:spring-boot-starter-data-jpa")
         compile("org.springframework.boot:spring-boot-starter-security")
         compile("org.springframework.cloud:spring-cloud-starter-oauth2")
-        compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE")
+        // Required due to a bug in spring cloud which has a dependency on a milestone release for spring-security-oauth2-autoconfigure:2.1.0.M4
+        compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE") 
 
         testCompile project(":thule-test")
         testCompile("org.springframework.boot:spring-boot-starter-data-jpa")
