--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -77,6 +77,8 @@ project("thule-people-service") {
         compile("org.springframework.data:spring-data-rest-hal-browser")
         // Required to retry connecting to the configuration service when it is not available at startup
         compile("org.springframework.retry:spring-retry")
+        // Required due to a bug in spring cloud which has a dependency on a milestone release for spring-security-oauth2-autoconfigure:2.1.0.M4
+        compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE")
 
         testCompile("uk.co.serin.thule:thule-spring-boot-starter-test:1.0.0-SNAPSHOT")
 
