--- a/thule-gateway/build.gradle
+++ b/thule-gateway/build.gradle
@@ -59,6 +59,7 @@ project("thule-gateway-service") {
         compile('org.springframework.cloud:spring-cloud-starter-netflix-zuul')
         compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile("org.springframework.cloud:spring-cloud-starter-zipkin")
+        // Required to retry connecting to the configuration service when it is not available at startup
         compile("org.springframework.retry:spring-retry")
         // Required due to a bug in spring cloud which has a dependency on a milestone release for spring-security-oauth2-autoconfigure:2.1.0.M4
         compile("org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.2.RELEASE")
