--- a/thule-people/build.gradle
+++ b/thule-people/build.gradle
@@ -67,11 +67,12 @@ project("thule-people-service") {
         compile("org.springframework.boot:spring-boot-starter-data-jpa")
         compile("org.springframework.boot:spring-boot-starter-data-rest")
         compile("org.springframework.boot:spring-boot-starter-validation")
+        compile("org.springframework.boot:spring-boot-starter-web")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-netflix-eureka-client")
         compile("org.springframework.cloud:spring-cloud-starter-openfeign")
         compile("org.springframework.cloud:spring-cloud-starter-sleuth")
-        compile("org.springframework.cloud:spring-cloud-starter-zipkin")
+//        compile("org.springframework.cloud:spring-cloud-starter-zipkin")
         compile("org.springframework.data:spring-data-rest-hal-browser")
         // Required to retry connecting to the configuration service when it is not available at startup
         compile("org.springframework.retry:spring-retry")
