--- a/thule-people/thule-people-config/src/main/resources/config/application.yml
+++ b/thule-people/thule-people-config/src/main/resources/config/application.yml
@@ -42,7 +42,7 @@ spring:
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
     password: thule
-    url: jdbc:log4jdbc:mysql://${thule.peopleservice.mysql.host:localhost}:${thule.peopleservice.mysql.port:3306}/thule
+    url: jdbc:log4jdbc:mysql://${thule.peopleservice.mysql.host:localhost}:${thule.peopleservice.mysql.port:3306}/thule?serverTimezone=Europe/London
     username: thule
   flyway:
     baseline-on-migrate: true # Allow for case where the schema exists but Flyway did not create it. ***DO NOT*** leave set to true in prod environments
